// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card has skeleton as specified by Tailwind UI 1`] = `
<div
  className="bg-white overflow-hidden shadow rounded-lg"
>
  <div
    className="px-4 py-5 sm:p-6"
  />
</div>
`;

exports[`CardWithHeader has skeleton as specified by Tailwind UI 1`] = `
<div
  className="bg-white overflow-hidden shadow rounded-lg divide-y divide-gray-200"
>
  <div
    className="px-4 py-5 sm:px-6"
  >
    header
  </div>
  <div
    className="px-4 py-5 sm:p-6"
  >
    main content
  </div>
</div>
`;
